--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@gregerhalltorp/web-app-utils",
   "version": "0.3.3",
   "description": "Utilities for web-apps",
-  "main": "./dist/index.js",
+  "main": "./lib/index.js",
   "scripts": {
     "clean": "rimraf lib",
     "prebuild": "npm run clean",
